  removed incrimined Btype.log_type, replaced by Btype.set_type
  (Jacques Garrigue, report by Alain Frisch, review by Thomas Refis)

- #8855, #8858: Links for tools not created when installing with
  --disable-installing-byecode-programs (e.g. ocamldep.opt installed, but
  ocamldep link not created)
  (David Allsopp, report by Thomas Leonard)

- #8875: fix missing newlines in the output from MSVC invocation.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #8921, #8924: Fix stack overflow with Flambda
  (Vincent Laviron, review by Pierre Chambart and Leo White,
   report by Aleksandr Kuzmenko)

- #8892, #8895: fix the definition of Is_young when CAML_INTERNALS is not
  defined.
  (David Allsopp, review by Xavier Leroy)

- #8896: deprecate addr typedef in misc.h
  (David Allsopp, suggestion by Xavier Leroy)

OCaml 4.09 maintenance branch:
------------------------------

- #8953, #8954: Fix error submessages in the toplevel: do not display
  dummy locations
  (Armaël Guéneau, review by Gabriel Scherer)

- #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
  (Gabriel Scherer and David Allsopp, report by Anton Kochkov)

OCaml 4.09.0 (19 September 2019):
---------------------------------

### Runtime system:

* #1725, #2279: Deprecate Obj.set_tag and Obj.truncate
  (Stephen Dolan, review by Gabriel Scherer, Damien Doligez and Xavier Leroy)

* #2240: Constify "identifier" in struct custom_operations
  (Cedric Cellier, review by Xavier Leroy)

* #2293: Constify "caml_named_value"
  (Stephen Dolan, review by Xavier Leroy)

- #8787, #8788: avoid integer overflow in caml_output_value_to_bytes
  (Jeremy Yallop, report by Marcello Seri)


- #2075, #7729: rename _T macro used to support Unicode in the (Windows) runtime
  in order to avoid compiler warning
  (Nicolás Ojeda Bär, review by Gabriel Scherer and David Allsopp)

- #2250: Remove extra integer sign-extension in compare functions
  (Stefan Muenzel, review by Xavier Leroy)
